# SCRaytrace

./: .gitignore  CMakeLists.txt  CombineConvert.py  Doxyfile  K-F-Models_01.xlsx  LICENSE.txt  Model_F_Standard_im001.fits  README.md
data/: CMakeLists.txt  emis.xdr  teg.xdr  ti.xdr  yisel.xdr
docbook/: Makefile  README  cme20070515ABeuvi02.eps  cme20070515Aeuvi01.eps  cme20070515Beuvi01.eps  config.xsl  docbook.css  raytraceman.docbook_06.xml
documentation/: Raytracing Software for the Simulation of the Solar Corona_20210608_01.docx  ~$cumentation of models?.docx  ~$ytracing Software for the Simulation of the Solar Corona_20210608_01.docx
idl/: hello.pro
python/: 7-23-2021 Animation.py  Animation_Save_Images.py  hello.py  scraytrace.py
python/Output/test01/Movie01/: Movie01_im000.fits  Movie01_im001.fits  Movie01_im002.fits  Movie01_im003.fits  Movie01_im004.fits  Movie01_im005.fits  Movie01_im006.fits  Movie01_im007.fits  Movie01_im008.fits  Movie01_im009.fits  Movie01_im010.fits  Movie01_im011.fits  Movie01_im012.fits  Movie01_im013.fits  Movie01_im014.fits  Movie01_im015.fits  Movie01_im016.fits  Movie01_im017.fits  Movie01_im018.fits  Movie01_im019.fits
python/Output/test01/Movie02/: Movie02_im000.fits  Movie02_im001.fits  Movie02_im002.fits  Movie02_im003.fits  Movie02_im004.fits  Movie02_im005.fits  Movie02_im006.fits  Movie02_im007.fits  Movie02_im008.fits  Movie02_im009.fits  Movie02_im010.fits  Movie02_im011.fits  Movie02_im012.fits  Movie02_im013.fits  Movie02_im014.fits  Movie02_im015.fits  Movie02_im016.fits  Movie02_im017.fits  Movie02_im018.fits  Movie02_im019.fits
python/Output/test01/Movie03/: Movie03_im000.fits  Movie03_im001.fits  Movie03_im002.fits  Movie03_im003.fits  Movie03_im004.fits  Movie03_im005.fits  Movie03_im006.fits  Movie03_im007.fits  Movie03_im008.fits  Movie03_im009.fits  Movie03_im010.fits  Movie03_im011.fits  Movie03_im012.fits  Movie03_im013.fits  Movie03_im014.fits  Movie03_im015.fits  Movie03_im016.fits  Movie03_im017.fits  Movie03_im018.fits  Movie03_im019.fits
python/Output/test01/Movie04/: Movie04_im000.fits  Movie04_im001.fits  Movie04_im002.fits  Movie04_im003.fits  Movie04_im004.fits  Movie04_im005.fits  Movie04_im006.fits  Movie04_im007.fits  Movie04_im008.fits  Movie04_im009.fits  Movie04_im010.fits  Movie04_im011.fits  Movie04_im012.fits  Movie04_im013.fits  Movie04_im014.fits  Movie04_im015.fits  Movie04_im016.fits  Movie04_im017.fits  Movie04_im018.fits  Movie04_im019.fits
python/Output/test01/Movie05/: Movie05_im000.fits  Movie05_im001.fits  Movie05_im002.fits  Movie05_im003.fits  Movie05_im004.fits  Movie05_im005.fits  Movie05_im006.fits  Movie05_im007.fits  Movie05_im008.fits  Movie05_im009.fits
python/pyscraytrace/: scraytrace.py
python/scraytrace/: RTLocalEnvPath OG.yaml  RTLocalEnvPath.yaml  __init__.py  libraytracethread.dylib  scraytrace_main.py  write_vsf.py
python/scraytrace/tests/: test.py
sphinx/source/: FCorona.rst  SomeSoftwareConcepts.rst  conf.py  index.rst  test.rst
src/: CControlPoint.cpp  CControlPoint.h  CMakeLists.txt  CModel46.cpp  CModel46.h  CModel48.cpp  CModel48.h  CModelBase.cpp  CModelBase.h  Cbasis.cpp  Cbasis.h  Cbasistest.cpp  Cbasistest.h  Cdvoxel.cpp  Cdvoxel.h  CheckEnvVar.cpp  Clos.cpp  Clos.h  Cmat.cpp  Cmat.h  Cnurbs.cpp  Cnurbs.h  Cvec.cpp  Cvec.h  Cvoxvert.cpp  Cvoxvert.h  ModelPosition.cpp  ModelPosition.h  boostTestTest.cpp  camera.cpp  camera.h  cameratest.cpp  cameratest.h  config.h.in  constant.h  cuvemission.cpp  cuvemission.h  cuvemissiontest.cpp  cuvemissiontest.h  cvectest.cpp  (+78 more)
